--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ paper_cache
 paper_files
 06-assessing_lime_explanations_cache
 06-assessing_lime_explanations_files
+Applying-LIME-to-Bullet-Data.Rproj
