--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ paper_files
 06-assessing_lime_explanations_cache
 06-assessing_lime_explanations_files
 Applying-LIME-to-Bullet-Data.Rproj
+data/logistic_mains.rds
+data/logistic_inters2.rds
+data/logistic_inters3.rds
