more on logistic regression

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ paper_files
 06-assessing_lime_explanations_files
 Applying-LIME-to-Bullet-Data.Rproj
 journals/07-logistic_regression/data
+07-logistic_regression_cache
+07-logistic_regression_files
