updated gitignore to ignore data folders for journals

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ paper_files
 07-logistic_regression_files
 Applying-LIME-to-Bullet-Data.Rproj
 journals/07-logistic_regression/data
-
+journals/08-iris_comparison/data
+journals/09-understanding_lime/data
