changed name of R project and updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,6 @@ paper_files
 Applying-LIME-to-Bullet-Data.Rproj
 journals/07-logistic_regression/data
 journals/08-iris_comparison/data
+08-iris_comparison_cache
+08-iris_comparison_files
 journals/09-understanding_lime/data
