moved tons of files into gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ journals/08-iris_comparison/data
 08-iris_comparison_cache
 08-iris_comparison_files
 journals/09-understanding_lime/data
+*.tex
+*.log
+*.gz
+*.aux
+*.bbl
+*.blg
+*.toc
+*.DS_Store
+*.pag
