remianders of the merge conflict

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ journals/08-iris_comparison/data
 08-iris_comparison_cache
 08-iris_comparison_files
 journals/09-understanding_lime/data
-*.tex
+^*.tex$
 *.log
 *.gz
 *.aux
