--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 
 # General
+.Rproj.user
+.Rhistory
+.RData
+.Ruserdata
 *.DS_Store
 *.Rproj
-.Rproj.user/
-*.Rhistory
-*.RData
-*.Ruserdata
 data
 
 # Journals
