added _files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ data
 
 # Journals
 *_cache$
+*_files$
 06-assessing_lime_explanations_files
 06-assessing_lime_explanations_cache
 06-assessing_lime_explanations_files
